# container-crewai

./: .gitignore  API_GUIDE.md  CLOUDFLARE_DEPLOYMENT.md  COMPUTER_USE.md  CONTRIBUTING.md  Dockerfile  README.md  package.json  pyproject.toml  pytest.ini  wrangler.jsonc  wrangler.toml
.github/: PR_MIGRATION_NOTE.md
src/api/: health.py  search_config.py  service.py
src/computer_use/: __init__.py  agent.py
src/github_resume_generator/: crew.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_health.py  test_search_config.py
worker/: index.js
